--- a/ui-core/src/ui-controls/styles/button.module.scss
+++ b/ui-core/src/ui-controls/styles/button.module.scss
@@ -1,10 +1,8 @@
-.test-background{
-
-    background-color: beige;
+.testBackground{
+    background-color: #e5db7f;
 }
 
 .button-style-rounded{
-
     border: 0;
     border-radius: 6px;
     cursor: pointer;   
