--- a/ui-core/src/ui-resource-gallery/styles/ResourceGallery.module.scss
+++ b/ui-core/src/ui-resource-gallery/styles/ResourceGallery.module.scss
@@ -4,6 +4,7 @@
     display: flex;
     min-width: 100vw;
     min-height: 100vh;
+    overflow: auto;
 }
 
 .resourceGalleryContainer {
@@ -16,6 +17,12 @@
 .categoryBrowser {
     border: 3px solid yellow;
     width: 10em;
+    top: 25%;
+    position: fixed;
+    border: 3px solid yellow;
+    width: 12em;
+    height: 50vh;
+    overflow-x: scroll;
 }
 
 .resourcePreview {
@@ -25,5 +32,3 @@
 .title {
     text-align: center;
 }
-
-
