chore(53): types housekeeping module re arrangements syle service refactor

--- a/ui-core/src/ui-style-service/styles/SystemStylesScssModule.module.scss
+++ b/ui-core/src/ui-style-service/styles/SystemStylesScssModule.module.scss
@@ -1,5 +1,6 @@
 $nature-theme-color-primary: green;
+$basic_border: 2px solid red;
 
-.natureThemeColor {
-    color: $nature-theme-color-primary;
+.sysStyleBasicBorder {
+    border: $basic_border;
 }
