--- a/ui-core/src/ui-style-service/styles/SystemStylesScssModule.module.scss
+++ b/ui-core/src/ui-style-service/styles/SystemStylesScssModule.module.scss
@@ -2,5 +2,6 @@ $nature-theme-color-primary: green;
 $basic_border: 2px solid red;
 
 .sysStyleBasicBorder {
+    background-color: $nature-theme-color-primary;
     border: $basic_border;
 }
